[package]
name = "beelog"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "beelog"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[dependencies]
dirs = "6.0.0"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
ssh2 = "0.9.5"
base32 = "0.5.1"
hmac = "0.12"
sha1 = "0.10"
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"
indicatif = "0.18.0"
reedline = "0.41.0"
chrono = "0.4.41"